--- a/Projeto/src/app/views/quiz_register_form.ejs
+++ b/Projeto/src/app/views/quiz_register_form.ejs
@@ -10,8 +10,8 @@
 <body style="font-family:Verdana;color:#05252c;" onload="chatroom()">
 
   <div style="background-color:#90b1df;padding:5px;text-align:center;">
-    <h2><%= title %></h2>
-    <p style="font-size:50%;"><%= wsa %>:<%= wsp %></p>
+    <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
+    <p style="font-size:50%;margin: 0px;padding: 0;"><%= wsa %>:<%= wsp %></p>
     <% if (fail_msg != undefined) { %>
       <p style="font-family:Verdana;color:#e10e1c;"> <%= fail_msg%> </p>
     <%}%>
@@ -20,25 +20,27 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3>Quizzes</h3>
-      <ul>
+      <h3 style="margin: 0px;padding: 0;">Quizzes</h3>
+      <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
-          <Div>
-            <a href="/quiz_register_form" > New... </a>
+          <Div  style="padding-bottom: 10px ;">
+            &#x1F4C4 <a href="/quiz_register_form" >New...</a>
           </Div>            
         </li>
         <% if (user_quizzes != undefined) { %>
           <% for (const key in user_quizzes) { %>
-            <li> 
-              <Div>
-                <p style="margin-top: 0.0em ; margin-bottom: 0.0em ;"><%= user_quizzes[key].name %> <a href= <%= "/quiz_edit_form?quiz_key=" + key %> style="text-decoration: none;"> &#9998 </a> </p>
-                <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[key].theme %> </p>
-              </Div>                
-            </li>
+              <li> 
+                <Div>
+                  &#x1F50E <a href= <%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;"> <%= user_quizzes[key].name %> </a>
+                  <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[key].theme %> </p>
+                </Div>                
+              </li>
           <% } %>
         <% } %>
-      </ul>    
+      </ul>       
     </div>
+
+    
 
     <div class="forms" style="background-color:#90b1df">
       <h3>New Quiz</h3>
@@ -55,11 +57,11 @@
 
   <div id="status" style="background-color:#90b1df;text-align:center;padding:5px;margin-top:7px;">
     <% if (user != undefined) { %>
-    <p> <%= user.name %> </p>
-    <p style="font-size:50%;"> <%= user.email %> </p>
+    <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
+    <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
     <a href="/user_logout"> logout </a>
     <%} else { %>
-    <a href="/user_login_form"> login </a>
+    <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
     <% } %>
   </div>
 
