--- a/Projeto/src/app/views/quiz_view.ejs
+++ b/Projeto/src/app/views/quiz_view.ejs
@@ -24,7 +24,7 @@
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
-            &#x1F4C4 <a href="/quiz_register_form" >New Quiz...</a>
+            &#x1F4C4 <a href="/quiz_register_form" >New...</a>
           </Div>            
         </li>
         <% if (user_quizzes != undefined) { %>
@@ -47,7 +47,7 @@
       <ul style="margin: 0px;margin-left: 30px;padding: 0;">
         <li> 
           <Div>
-            <a href= <%= "/question_register_form?quiz_key=" + quiz_key %>> New Question... </a>
+            <a href= <%= "/question_register_form?quiz_key=" + quiz_key %>> New... </a>
           </Div>            
         </li>
         <% if (user_quizzes != undefined && quiz_key in user_quizzes) { %>
