--- a/Projeto/src/app/views/quiz_home.ejs
+++ b/Projeto/src/app/views/quiz_home.ejs
@@ -20,6 +20,7 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
+      <a href="/" style="text-decoration: none;">&#x1F519</a>
       <h3 style="margin: 0px;padding: 0;">Quizzes</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
