--- a/Projeto/src/app/views/match_view.ejs
+++ b/Projeto/src/app/views/match_view.ejs
@@ -43,7 +43,9 @@
     <div class="main">
       <h3 style="padding: 0;"><%= user_matches[match_key].name %></h3>
       <h4 style="margin: 0px;margin-left: 10px;padding: 0;">launch</h4>
-      
+      <Div  style="padding-bottom: 10px ;">
+        <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" + user_matches[match_key].name %> >&#x1F4C4</a>
+      </Div>
     </div>
     
   </div>
