--- a/Projeto/src/app/views/home.ejs
+++ b/Projeto/src/app/views/home.ejs
@@ -4,10 +4,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css"  href="/stylesheets/style.css">
-  <script src="/javascripts/chatroom.js"></script>
+  <script src="/javascripts/wsmatchinfo.js"></script>
 </head>
 
-<body style="font-family:Verdana;color:#05252c;" onload="chatroom()">
+<body style="font-family:Verdana;color:#05252c;" onload="wsmatchinfo()">
 
   <div style="background-color:#90b1df;padding:5px;text-align:center;">
     <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
@@ -20,7 +20,7 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0;">Data</h3>
+      <h3 style="margin: 0px;padding: 0;">User Data</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
@@ -45,6 +45,23 @@
     <div class="main">
       <h3>Welcome!!</h3>
       <p>On this site, you can create quizzes, games and educational challenges, as well as participate in games and challenges proposed by other users. Good studies!</p>
+    </div>
+
+    <div class="left" style="background-color:#90b1df">
+
+      <h1 id="web_socket_server_port" hidden><%= wssp %></h1>
+      <h1 id="web_server_address" hidden><%= wsa %></h1>
+      <h1 id="ws_matchtinfo_cluster_key" hidden><%= wsmatchinfoclusterkey %></h1>
+      <h1 id="ws_matchtinfo_key" hidden><%= wsmatchinfokey %></h1>
+
+      <h3 style="margin: 0px;padding: 0;">Launched Matches</h3>
+      <ul id="launched_matches_list" style="list-style-type: none; margin: 10px;padding: 0;">
+        <li> 
+          <Div  style="padding-bottom: 10px ;">
+            &#x1F4C4 <a href="/match_register_form" >New...</a>
+          </Div>   
+        </li>         
+      </ul>       
     </div>
     
   </div>
