--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -4,10 +4,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css"  href="/stylesheets/style.css">
-  <script src="/javascripts/wsmatch.js"></script>
+  <script src="/javascripts/wsmatchroom.js"></script>
 </head>
 
-<body style="font-family:Verdana;color:#05252c;" onload="wsmatch()">
+<body style="font-family:Verdana;color:#05252c;" onload="wsmatchroom()">
 
   <div style="background-color:#7a814b;padding:5px;text-align:center;">
     <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
@@ -26,6 +26,8 @@
 
     <div class="main">
       <h3>Match Room</h3>
+      <button id="pass_button" class="button button1">Pass</button>
+      <button id="response_button" class="button button2">Response</button>
     </div>
 
     <div class="left" style="background-color:#7a814b">
