--- a/Projeto/src/app/public/stylesheets/style.css
+++ b/Projeto/src/app/public/stylesheets/style.css
@@ -83,3 +83,54 @@
   visibility: visible;
   opacity: 1;
 }
+
+.button {
+  width:100px;
+  border: none;
+  color: white;
+  padding: 8px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 4px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 4px solid #008CBA;
+}
+
+.button2:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
+button:disabled,
+button[disabled]{
+  border: 4px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+button[disabled]:hover{
+  border: 4px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+
