--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -34,7 +34,9 @@
       <div id="question_room_div" hidden>
         <h3>Question</h3>
         <div style="float: left;text-align: center;width: 70%;">
-          <h3>Description</h3>                    
+          <h5 id="quiz_theme"></h5> 
+          <h3 id="question_description"></h3> 
+          <ul id="question_options_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>
         </div>
         <div id="pass_response_room_div" style='float: left;text-align: center;width: 30%;'>
           <button id="pass_button" class="button button1">Pass</button>
