--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -38,7 +38,7 @@
           <h3 id="question_description"></h3> 
           <ul id="question_options_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>
         </div>
-        <div id="pass_response_room_div" style='float: left;text-align: center;width: 30%;'>
+        <div id="pass_response_room_div" style='float: left;text-align: center;width: 30%;' hidden>
           <button id="pass_button" class="button button1">Pass</button>
           <button id="response_button" class="button button2">Response</button>
         </div>
