--- a/Projeto/src/app/views/question_edit_form.ejs
+++ b/Projeto/src/app/views/question_edit_form.ejs
@@ -56,7 +56,7 @@
 
 
       <h3>Edit Question</h3>
-      <form id="quiz_register" action=<%= "/quiz_view?quiz_key=" + quiz_key + "&question_key=" + question_key%> method="get">
+      <form id="quiz_register" action=<%= "/question_edit?quiz_key=" + quiz_key + "&question_key=" + question_key%> method="get">
         <input id="quiz_key" name="quiz_key" type="hidden" value= <%= quiz_key %> >
         <input id="question_key" name="question_key" type="hidden" value= <%= question_key %> >
         <textarea id="description" name="description" placeholder="question description" style="width:50%; margin: 2px" required autofocus><%= user_quizzes[quiz_key].questions[question_key].description %></textarea><br>
