--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -32,11 +32,11 @@
         <h3 id="avatares_emojis"></h3>        
       </div>   
       <div id="question_room_div" hidden>
-        <h3>Question</h3>
-        <div style="float: left;text-align: center;width: 70%;">
+        <h3 id="round_h">Round</h3>
+        <div style="float: left;text-align: left;width: 70%;">
           <h5 id="quiz_theme"></h5> 
           <h3 id="question_description"></h3> 
-          <ul id="question_options_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>
+          <ul id="question_options_list" style="margin: 10px;padding: 0;"></ul>
         </div>
         <div id="pass_response_room_div" style='float: left;text-align: center;width: 30%;' hidden>
           <button id="pass_button" class="button button1" disabled>Pass</button>
