--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -61,6 +61,7 @@
     <h1 id="ws_match_owner_user_key" hidden><%= ws_match_owner_user_key %></h1>
     <h1 id="ws_match_cluster_key" hidden><%= ws_match_cluster_key %></h1>
     <h1 id="ws_match_player_key" hidden><%= ws_match_player_key %></h1>
+    <h1 id="ws_match_player_name" hidden><%= ws_match_player_name %></h1>
     <% if (user != undefined) { %>
     <h1 id="user_key" hidden><%= user.email %></h1>
     <%} else { %>
