--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -26,7 +26,7 @@
 
 
     <div class="main" style='text-align: center;margin-top: 7px;'>
-      <h3 style="margin: 0px;padding: 0;">Match Room</h3>
+      <!-- <h3 style="margin: 0px;padding: 0;">Match Room</h3> -->
       <div id="register_room_div" hidden>
         <h3>Register at Match</h3>
         <h3 id="avatares_emojis"></h3>        
