--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -27,8 +27,13 @@
 
     <div class="main" style='text-align: center;margin-top: 7px;'>
       <!-- <h3 style="margin: 0px;padding: 0;">Match Room</h3> -->
+      <div id="podium_div" hidden>
+        <h3>Podium</h3>
+        <div id="places_div" class="flex-container" ></div>        
+      </div>
       <div id="register_room_div" hidden>
         <h3>Register at Match</h3>
+        <h5>choose your avatar</h5>
         <h3 id="avatares_emojis"></h3>        
       </div>   
       <div id="question_room_div" hidden>
@@ -45,7 +50,8 @@
       </div>
       <div id="pass_room_div" hidden>
         <h3>Pass to</h3>
-        <ul id="pass_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul>
+        <h3 id="avatares_pass"></h3>
+        <!-- <ul id="pass_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul> -->
       </div>      
     </div>
 
