--- a/Projeto/src/app/public/stylesheets/style.css
+++ b/Projeto/src/app/public/stylesheets/style.css
@@ -143,3 +143,13 @@ button[disabled]:hover{
 .flex-container > div {
   text-align: center;
 }
+
+.flex-container2 {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content:center;
+}
+
+.flex-container2 > div {
+  text-align: center;
+}
