--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -29,7 +29,7 @@
       <!-- <h3 style="margin: 0px;padding: 0;">Match Room</h3> -->
       <div id="podium_div" hidden>
         <h3>Podium</h3>
-        <div id="places_div" class="flex-container" ></div>        
+        <div id="places_div" class="flex-container2" ></div>        
       </div>
       <div id="register_room_div" hidden>
         <h3>Register at Match</h3>
@@ -38,12 +38,12 @@
       </div>   
       <div id="question_room_div" hidden>
         <h3 id="round_h">Round</h3>
-        <div style="float: left;text-align: left;width: 70%;">
+        <div style="text-align: left;">
           <h5 id="quiz_theme"></h5> 
           <h3 id="question_description"></h3> 
           <ul id="question_options_list" style="margin: 10px;padding: 0;"></ul>
         </div>
-        <div id="pass_response_room_div" style='float: left;text-align: center;width: 30%;' hidden>
+        <div id="pass_response_room_div" style='text-align: center;' hidden>
           <button id="pass_button" class="button button1" disabled>Pass</button>
           <button id="response_button" class="button button2" disabled>Response</button>
         </div>
