--- a/Projeto/src/app/views/match_register_form.ejs
+++ b/Projeto/src/app/views/match_register_form.ejs
@@ -3,17 +3,19 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css"  href="/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   <script src="/javascripts/chatroom.js"></script>
+
 </head>
 
 <body style="font-family:Verdana;color:#05252c;" onload="chatroom()">
 
+  
   <div style="background-color:#90b1df;padding:5px;text-align:center;">
     <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
     <p style="font-size:50%;margin: 0px;padding: 0;"><%= wsa %>:<%= wsp %></p>
     <% if (fail_msg != undefined) { %>
-      <p style="font-family:Verdana;color:#e10e1c;"> <%= fail_msg%> </p>
+    <p style="font-family:Verdana;color:#e10e1c;"> <%= fail_msg%> </p>
     <%}%>
   </div>
 
@@ -28,30 +30,38 @@
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
-          <% for (const key in user_matches) { %>
-              <li> 
-                <Div>
-                  &#x1F50E <a href= <%= "/match_view?match_key=" + key %> style="text-decoration: none;"> <%= user_matches[key].name %> </a>
-                  <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_matches[key].theme %> </p>
-                </Div>                
-              </li>
-          <% } %>
-        <% } %>
-      </ul>       
-    </div>
+    <% for (const key in user_matches) { %>
+    <li>
+      <Div>
+        &#x1F50E <a href=<%= "/match_view?match_key=" + key %> style="text-decoration: none;">
+          <%= user_matches[key].name %> </a>
+        <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_matches[key].theme %> </p>
+      </Div>
+    </li>
+    <% } %>
+    <% } %>
+    </ul>
+  </div>
 
-    
 
-    <div class="forms" style="background-color:#90b1df">
-      <h3>New Match</h3>
-      <form id="match_register" action="/match_register" method="get">
-        <input id="name" name="name"  placeholder="quiz name" style="width:50%; margin: 2px" autofocus required type="text"></input><br>
-        <button id="register_btn" type="submit" style="width:50%; margin: 10px;">Register</button>
-      </form>
-    </div>
 
-    <div class="left"></div>
-    
+  <div class="forms" style="background-color:#90b1df">
+    <h3>New Match</h3>
+    <form id="match_register" action="/match_register" method="get">
+      <input id="name" name="name" placeholder="match name" style="margin: 2px" autofocus required
+        type="text"></input><br>
+      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+      <label for="vehicle1"> I have a bike</label><br>
+      <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+      <label for="vehicle2"> I have a car</label><br>
+      <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+      <label for="vehicle3"> I have a boat</label><br>
+      <button id="register_btn" type="submit" style="margin: 10px;">Register</button>
+    </form>
+  </div>
+
+  <div class="left"></div>
+
   </div>
 
   <div id="status" style="background-color:#90b1df;text-align:center;padding:5px;margin-top:7px;">
@@ -59,7 +69,6 @@
     <p style="margin: 0px;padding: 0;"> <%= user.name %> </p>
     <p style="font-size:50%;margin: 0px;padding: 0;"> <%= user.email %> </p>
     <a href="/user_logout"> logout </a>
-    <a href="/quiz_home"> back </a>
     <%} else { %>
     <a style="margin: 0px;padding: 0;" href="/user_login_form"> login </a>
     <% } %>
