--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -9,6 +9,24 @@
 
 <body style="font-family:Verdana;color:#05252c;" onload="wsmatchroom()">
 
+  <!-- <audio id="alert1_audio" preload="auto">    
+    <source src="/audio/alert1.wav" type="audio/wav">
+    Your browser does not support the audio element.
+  </audio>
+  <audio id="applause_audio" preload="auto">    
+    <source src="/audio/applause.wav" type="audio/wav">
+    Your browser does not support the audio element.
+  </audio>
+  <audio id="wrong_audio" preload="auto">    
+    <source src="/audio/wrong.wav" type="audio/wav">
+    Your browser does not support the audio element.
+  </audio>
+  <audio id="rigth_audio" preload="auto">    
+    <source src="/audio/right.wav" type="audio/wav">
+    Your browser does not support the audio element.
+  </audio> -->
+
+
   <div style="background-color:#dde1be;padding:5px;text-align:center;">
     <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
     <p style="font-size:50%;margin: 0px;padding: 0;"><%= wsa %>:<%= wsp %></p>
@@ -27,42 +45,48 @@
 
     <div class="main" style='text-align: center;margin-top: 7px;'>
       <!-- <h3 style="margin: 0px;padding: 0;">Match Room</h3> -->
-      <div id="podium_div" hidden>
-        <h3>Podium</h3>
-        <div id="places_div" class="flex-container2" ></div>        
-      </div>
-      <div id="register_room_div" hidden>
-        <h3>Register at Match</h3>
-        <h5>choose your avatar</h5>
-        <h3 id="avatares_emojis"></h3>        
-      </div>   
-      <div id="question_room_div" hidden>
-        <h3 id="round_h">Round</h3>
-        <div style="text-align: left;">
-          <h5 id="quiz_theme"></h5> 
-          <h3 id="question_description"></h3> 
-          <ul id="question_options_list" style="margin: 10px;padding: 0;"></ul>
-        </div>
-        <div id="pass_response_room_div" style='text-align: center;' hidden>
-          <button id="pass_button" class="button button1" disabled>Pass</button>
-          <button id="response_button" class="button button2" disabled>Response</button>
-        </div>
-      </div>
-      <div id="pass_room_div" hidden>
-        <h3>Pass to</h3>
-        <h3 id="avatares_pass"></h3>
-        <!-- <ul id="pass_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul> -->
-      </div>      
+      <h1  style="margin: 0px;padding: 0;"><%= match.name %></h1>
+      <h6 id="cronnos_status" style='margin: 0px;padding: 0;'>&nbsp;</h6>
+    <div id="podium_div" hidden style="padding: 10px;">
+      <h3>Podium</h3>
+      <div id="places_div" class="flex-container2" style="padding: 10px;"></div>
     </div>
+    <div id="register_room_div" hidden>
+      <h3>Register to play by choosing an avatar</h3>
+      <h3 id="avatares_emojis"></h3>
+    </div>
+    <div id="question_room_div" hidden>
+      <h3 id="round_h">Round</h3>
+      <div style="text-align: left;">
+        <h5 id="quiz_theme"></h5>
+        <h3 id="question_description"></h3>
+        <ul id="question_options_list" style="margin: 10px;padding: 0;"></ul>
+      </div>
+      <div id="pass_response_room_div" style='text-align: center;' hidden>
+        <button id="pass_button" class="button button1" disabled>Pass</button>
+        <button id="response_button" class="button button2" disabled>Response</button>
+      </div>
+    </div>
+    <div id="pass_room_div" hidden>
+      <h3>Pass to another player by choosing an avatar</h3>
+      <h3 id="avatares_pass"></h3>
+      <!-- <ul id="pass_list" style="list-style-type: none; margin: 10px;padding: 0;"></ul> -->
+    </div>
+    <div id="status_div" style="padding: 10px;">
+      <span id="ws_match_status_emoji" style="margin: 0;font-size:50px;"></span><br>
+      <!-- <span id="cronnos_status" style='font-size:20px;'></span> -->
+      <h5 id="ws_match_status_text" style="margin: 0;"></h5>
+    </div>
+  </div>
 
-    <div class="left" style="background-color:#dde1be;text-align: center">
-
-      <h3>Status</h3>   
+  <div class="left" style="background-color:#dde1be;text-align: center">
+    <!-- <div id="status_div">
+      <h3>Status</h3>
       <span id="ws_match_status_emoji" style='font-size:50px;'></span><br>
       <span id="cronnos_status" style='font-size:20px;'></span>
       <h5 id="ws_match_status_text" style="margin: 0px;padding: 0;"></h5>
-              
-      <h1 id="web_socket_server_port" hidden><%= wssp %></h1>
+    </div> -->
+    <h1 id="web_socket_server_port" hidden><%= wssp %></h1>
     <h1 id="web_server_address" hidden><%= wsa %></h1>
     <h1 id="ws_match_owner_user_key" hidden><%= ws_match_owner_user_key %></h1>
     <h1 id="ws_match_cluster_key" hidden><%= ws_match_cluster_key %></h1>
