--- a/Projeto/src/app/views/home.ejs
+++ b/Projeto/src/app/views/home.ejs
@@ -76,7 +76,7 @@
         <a style="margin: 0px;padding: 0;" href="/user_register_form"> register </a>
       </p>
     <% } %>
-
+  </div>
 </body>
 
 </html>
