--- a/Projeto/src/app/views/match_room.ejs
+++ b/Projeto/src/app/views/match_room.ejs
@@ -116,7 +116,7 @@
       <a style="margin: 0px;padding: 0;" href="/user_register_form"> register </a>
     </p>
     <% } %>
-
+  </div>
 </body>
 
 </html>
