--- a/Projeto/src/app/views/match_view.ejs
+++ b/Projeto/src/app/views/match_view.ejs
@@ -4,10 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css"  href="/stylesheets/style.css">
-  <script src="/javascripts/chatroom.js"></script>
 </head>
 
-<body style="font-family:Verdana;color:#05252c;" onload="chatroom()">
+<body style="font-family:Verdana;color:#05252c;">
 
   <div style="background-color:#90b1df;padding:5px;text-align:center;">
     <h2 style="margin: 0px;padding: 0;"><%= title %></h2>
@@ -24,14 +23,14 @@
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
-            &#x1F4C4 <a href="/quiz_register_form" >New...</a>
+            &#x1F4C4 <a href="/match_register_form" >New...</a>
           </Div>            
         </li>
         <% if (user_matches != undefined) { %>
           <% for (const key in user_matches) { %>
               <li> 
                 <Div>
-                  &#x1F50E <a href= <%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;"> <%= user_matches[key].name %> </a>
+                  &#x1F50E <a href= <%= "/match_view?match_key=" + key %> style="text-decoration: none;"> <%= user_matches[key].name %> </a>
                   <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_matches[key].theme %> </p>
                 </Div>                
               </li>
@@ -42,9 +41,9 @@
 
     <div class="main">
       <h3 style="padding: 0;"><%= user_matches[match_key].name %></h3>
-      <h4 style="margin: 0px;margin-left: 10px;padding: 0;">launch</h4>
       <Div  style="padding-bottom: 10px ;">
-        <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" + user_matches[match_key].name %> >&#x1F4C4</a>
+        <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" %> style="text-decoration: none;" >&#x1F680;</a>
+        <a href=<%= "/match_edit_form?match_key=" + match_key %> style="text-decoration: none;">&#x1F4DD;</a>
       </Div>
     </div>
     
