botão excluir questões de quiz em quiz_view

--- a/Projeto/src/app/views/quiz_edit_form.ejs
+++ b/Projeto/src/app/views/quiz_edit_form.ejs
@@ -19,7 +19,7 @@
   <div style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3>Quizzes</h3>
+      <h3><a href="/quiz_view" style="text-decoration: none;">&#x1F519</a>Quizzes</h3>
       <ul>
         <li> 
           <Div>
