--- a/Projeto/src/app/views/quiz_view.ejs
+++ b/Projeto/src/app/views/quiz_view.ejs
@@ -55,7 +55,10 @@
             <Div  style="column-count: 3;">
               <li> 
                 <Div>
-                  <p style="margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[quiz_key].questions[question_key].description %>  <a href= <%= "/question_edit_form?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#9998 </a></p>
+                  <p style="margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[quiz_key].questions[question_key].description %> 
+                     <a href= <%= "/question_edit_form?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#9998 </a>
+                     <a onclick="confirmationBox()" href= <%= "/question_delete?quiz_key=" + quiz_key + "&question_key=" + question_key %> style="text-decoration: none;"> &#x274C; </a>
+                  </p>
                   <ul style="list-style-type: none;margin: 0;padding: 0;">
                     <li>
                       <p style="margin-top: 0.0em ; margin-bottom: 0.0em ;">True Option:  <%= user_quizzes[quiz_key].questions[question_key].true_option %> </p>
@@ -89,3 +92,12 @@
 </body>
 
 </html>
+<script>
+  function confirmationBox(){
+    if(window.confirm("Tem certeza que deseja deletar essa questão?")){
+      document.getElementById("quiz-delete").submit();
+    } else {
+      return;
+    }
+}
+</script>
