botao de voltar e de delete nas matches

--- a/Projeto/src/app/views/match_edit_form.ejs
+++ b/Projeto/src/app/views/match_edit_form.ejs
@@ -19,7 +19,7 @@
   <div style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3>Matches</h3>
+      <h3><a href="/match_view" style="text-decoration: none;">&#x1F519</a> Matches</h3>
       <ul>
         <li> 
           <Div>
