--- a/Projeto/src/app/views/match_view.ejs
+++ b/Projeto/src/app/views/match_view.ejs
@@ -19,7 +19,7 @@
   <div  style="overflow:auto;background-color:#90b1df;margin-top:7px;">
 
     <div class="left" style="background-color:#90b1df">
-      <h3 style="margin: 0px;padding: 0;"><a href="/match_home" style="text-decoration: none;">&#x1F519</a>Matches</h3>
+      <h3 style="margin: 0px;padding: 0;"><a href="/match_home" style="text-decoration: none;">&#x1F519</a> Matches</h3>
       <ul style="list-style-type: none; margin: 10px;padding: 0;">
         <li> 
           <Div  style="padding-bottom: 10px ;">
@@ -42,8 +42,8 @@
     <div class="main">
       <h3 style="padding: 0;"><%= user_matches[match_key].name %></h3>
       <Div  style="padding-bottom: 10px ;">
-        <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" %> style="text-decoration: none;" >&#x1F680;</a>
-        <a href=<%= "/match_edit_form?match_key=" + match_key %> style="text-decoration: none;">&#x1F4DD;</a>
+        &#x1F680 <a href=<%= "/match_launch?match_key=" + match_key + "&match_name=" %> style="text-decoration: none;" >Lançar Partida</a><p></p>
+        &#x1F4DD <a href=<%= "/match_edit_form?match_key=" + match_key %> style="text-decoration: none;">Editar Partida</a>
       </Div>
     </div>
     
