confirm box de delete consertado

--- a/Projeto/src/app/views/match_home.ejs
+++ b/Projeto/src/app/views/match_home.ejs
@@ -33,7 +33,7 @@
               <li> 
                 <Div>
                   &#x1F50E <a href= <%= "/match_view?match_key=" + key %> style="text-decoration: none;"> <%= user_matches[key].name %> </a>
-                  <a onclick="confirmationBox()" id="quiz-delete" href= <%= "/match_delete?match_key=" + key %> style="text-decoration: none;"> &#x274C; </a>
+                  <a onclick="return confirm('Tem certeza que deseja deletar essa partida?');" href= <%= "/match_delete?match_key=" + key %> style="text-decoration: none;"> &#x274C; </a>
                   <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_matches[key].theme %> </p>
                 </Div>                
               </li>
@@ -63,12 +63,3 @@
 </body>
 
 </html>
-<script>
-  function confirmationBox(){
-    if(window.confirm("Tem certeza que deseja deletar essa partida?")){
-      document.getElementById("quiz-delete").submit();
-    } else {
-      return;
-    }
-}
-</script>
