--- a/Projeto/src/app/views/quiz_home.ejs
+++ b/Projeto/src/app/views/quiz_home.ejs
@@ -33,7 +33,7 @@
               <li> 
                 <Div>
                   &#x1F50E <a href= <%= "/quiz_view?quiz_key=" + key %> style="text-decoration: none;"> <%= user_quizzes[key].name %> </a>
-                  <a onclick="confirmationBox()" id="quiz-delete" href=<%= "/quiz_delete?quiz_key=" + key %> style="text-decoration: none;">&#x274C; </a>
+                  <a onclick="return confirm('Tem certeza que deseja deletar esse quiz?');" href=<%= "/quiz_delete?quiz_key=" + key %> style="text-decoration: none;">&#x274C; </a>
                   <p style="font-size:50%;margin-top: 0.0em ; margin-bottom: 0.0em ;"> <%= user_quizzes[key].theme %> </p>
                 </Div>                
               </li>
@@ -61,12 +61,3 @@
 </body>
 
 </html>
-<script>
-  function confirmationBox(){
-    if(window.confirm("Tem certeza que deseja deletar o quiz?")){
-      document.getElementById("quiz-delete").submit();
-    } else {
-      return;
-    }
-}
-</script>
